<resources>
    <string name="app_name">Tutorship</string>

    <!-- Toolbar -->
    <string name="timetable_toolbar">Расписание</string>
    <string name="chat_toolbar">Сообщения</string>
    <string name="profile_toolbar">Профиль</string>
    <string name="reload_chat_toolbar">Обновление…</string>

    <!-- Errors -->
    <string name="error_network">Отсутствует подключение к сети</string>
    <string name="error_server">Упс.. Что-то пошло не так</string>
    <string name="error_email_already_exist">Email уже существует</string>
    <string name="error_phone_already_exist">Телефон уже существует</string>
    <string name="error_password_mismatch">Пароли не совпадают</string>
    <string name="error_password_length">Пароль менее 8 символов</string>
    <string name="error_password_symbols">Пароль должен состоять из 8 и более чисел, букв и символов "!@#$%&amp;-_"</string>
    <string name="error_auth">Неправильный email или пароль</string>
    <string name="error_field_must_not_be_empty">Поле не должно быть пустым</string>
    <string name="error_email_address_not_valid">Неправильный email</string>
    <string name="error_info_fields_empty">Пожалуйста, заполните все поля</string>
    <string name="error_password_not_valid">Неправильный пароль</string>
    <string name="error_user_is_not_found">Пользователь не найден</string>
    <string name="error_birthday_date">Проверьте дату рождения</string>
    <string name="error_token_invalid">Сервер не может обновить токен</string>

    <!-- Views -->
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="register">Регистрация</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="dont_have_account">Еще нет аккаунта?</string>
    <string name="login">Вход</string>
    <string name="logout">Выход</string>
    <string name="fio">ФИО</string>
    <string name="connect">В сети</string>
    <string name="what_is_your_name">Как Вас зовут?</string>
    <string name="what_is_your_type">Выбери свой тип:</string>
    <string name="what_is_your_info">Расскажи пожалуйста о себе</string>
    <string name="what_is_your_info_birthday">Укажи свой день рождения:</string>
    <string name="what_is_your_info_city">Место проживания:</string>
    <string name="what_is_your_info_sex">Выбери свой пол:</string>
    <string name="what_is_your_phone">Укажи свой номер телефона:</string>
    <string name="what_is_your_email">Укажи свой email и придумай пароль</string>
    <string name="hello_info">Привет, </string>
    <string name="next_step_registration">Продолжить</string>
    <string name="teacher">Преподаватель</string>
    <string name="student">Ученик</string>
    <string name="error_type">Неизвестный тип</string>
    <string name="numberDay">Д</string>
    <string name="numberMonth">М</string>
    <string name="numberYear">Г</string>
    <string name="man_sex">Мужской</string>
    <string name="woman_sex">Женский</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="day_text">День</string>
    <string name="month_text">Месяц</string>
    <string name="year_text">Год</string>
    <string name="type_user">Тип пользователя</string>
    <string name="lessons">Предметы</string>
    <string name="phone">Телефон</string>
    <string name="user_age">Возраст</string>
    
    <!-- Timetable week -->
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="prev_day">Предыдущий день</string>
    <string name="next_day">Следующий день</string>
    <string name="no_lessons">Занятия отсутствуют</string>

    <!-- Actions -->
    <string name="account_created">Аккаунт создан</string>
    <string name="account_login">Аккаунт вошел</string>
    <string name="content_description_icon_email">Email</string>
    <string name="content_description_icon_name">Имя</string>
    <string name="content_description_icon_password">Пароль</string>

    <!-- Pages -->
    <string name="timetable_page">Расписание</string>
    <string name="chat_page">Сообщения</string>
    <string name="profile_page">Профиль</string>

    <!-- Top Navigation Timetable -->
    <string name="calendar_nav_timetable">Календарь</string>
    <string name="week_nav_timetable">Неделя</string>
    <string name="list_nav_timetable">Список</string>
</resources>