<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundSign">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/timetable_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        android:background="@color/backgroundSign" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_layout_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_nav_timetable" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_layout_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_nav_timetable" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_layout_list_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_nav_timetable" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/timetable_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>