<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_prev_nav"
        app:layout_constraintBottom_toBottomOf="@+id/nameWeek"
        app:layout_constraintEnd_toStartOf="@+id/nameWeek"
        app:layout_constraintTop_toTopOf="@+id/nameWeek"
        android:contentDescription="@string/prev_day" />

    <TextView
        android:id="@+id/nameWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Понедельник"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/monday" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_next_nav"
        app:layout_constraintBottom_toBottomOf="@+id/nameWeek"
        app:layout_constraintStart_toEndOf="@+id/nameWeek"
        app:layout_constraintTop_toTopOf="@+id/nameWeek"
        android:contentDescription="@string/next_day" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listLessons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWeek" />

</androidx.constraintlayout.widget.ConstraintLayout>